Mon Apr 26 12:28:27 1993  Ian Lance Taylor  (ian@cygnus.com)

	* expr.c (operand): Fix unary plus operator (previously was the
	same as '~' operator!).

Wed Apr 21 00:20:11 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* write.c (cvt_frag_to_fill): Define even if BFD is defined.
	(write_object_file): Do define if BFD_ASSEMBLER.  Invoke
	obj_check_file_symbols if defined.  Call verify_symbol_chain_2
	instead of open-coding it.  Fix some bugs in patching up symbol
	chain.
	(relax_segment): Make some code we "ought to be able to" use for
	all targets no longer conditionalized on ns32k target; instead, do
	it always, and if the appropriate conditions fail, abort.

	* symbols.c (DEBUG): Enabled.
	(symbol_new): Make sure bfd_make_empty_symbol works.
	(verify_symbol_chain_2): New funcion; takes one symbol as
	argument, anywhere in the chain.
	(dollar_label*): Use default initializers.

	* as.c (perform_an_assembly_pass): Call md_begin here...
	(main): ...and not here.

	* config/tc-m68k.h (TARGET_FORMAT): Use a.out-sunos-big for a.out.
	(tc_frob_symbol): New macro: Get rid of symbols in reg_section.

	* config/tc-m68k.c (omagic): Don't define for BFD_ASSEMBLER.
	(add_fix, add_frag): Now functions instead of macros.
	(m68k_reg_parse, m68k_ip, md_estimate_size_before_relax, get_num,
	s_data1, s_data2, s_bss): Use new *_section names, for
	compatibility with BFD_ASSEMBLER mode; rewrite switch statements
	to handle non-integral segT.
	(tc_coff_fix2rtype, tc_aout_fix_to_chars,
	tc_coff_symbol_emit_hook): Don't define for BFD_ASSEMBLER.
	(tc_gen_reloc): New routine for BFD_ASSEMBLER.
	(md_apply_fix, md_apply_fix_2): Renamed old md_apply_fix to
	md_apply_fix_2; new md_apply_fix definition varies interface
	depending on BFD_ASSEMBLER.
	(md_convert_frag, md_convert_frag_1): Likewise.  Use new *_section
	names.

	* config/obj-vms.c: Include config.h.
	(version_string): Delete declaration.
	(Write_VMS_MHD_Records): Use GAS_VERSION instead.