@@ -1,0 +1,3 @@
+TARG_CPU_DEPENDENTS=$(srcdir)/../opcodes/h8500-opc.h
+LOCAL_LOADLIBES=../bfd/libbfd.a
+TDEFINES=-DBFD_HEADERS -DMANY_SEGMENTS -DBFD
